[package]
name = "cch23-rustyclause12"
version = "0.1.0"
edition = "2021"

[dependencies]
unescape = "0.1.0"
regex = "1.10.2"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.26.0"
