[package]
name = "cch23-rustyclause12"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.4.0"
password-rules-parser = "1.0.0"
itertools = "0.12.0"
handlebars = "3.5.5"
shuttle-shared-db = { version = "0.42.0", features = ["postgres"] }
chrono = "0.4"
image = "0.24.7"
color_counter = "0.2.3"
num-traits = "0.2.17"
rocketjson = "1.2.1"
reqwest = "0.11.22"
base64 = "0.21.5"
regex = "1.10.2"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.42.0"
shuttle-runtime = "0.42.0"
tokio = "1.38.2"
shuttle-persist = "0.42.0"
cch23-validator = "12.0.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "macros", "postgres"] }
